<resources>
    <string name="app_name">ReHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_user">User</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_account">Create account</string>
    <string name="wrong_login_data">Email or password wrong.</string>
    <string name="click_to_exit">Click one more time to exit.</string>
    <string name="title_devices">Devices</string>
    <string name="title_groups">Groups</string>
    <string name="title_actions">Actions</string>
    <string name="sample">=====</string>
    <string name="device_code_p">Device code: %1$s</string>
    <string name="id_p">ID: %1$s</string>
    <string name="logout">Logout</string>
    <string name="email_p">Email: %1$s</string>
    <string name="creation_date_p">Creation date: %1$s</string>
    <string name="device_info">Device Info</string>
    <string name="description_back_arrow">Back Arrow icon</string>
    <string name="device_info_name_p">Name: %1$s</string>
    <string name="device_info_code_p">Device code: %1$s</string>
    <string name="device_info_status_p">Status: %1$s</string>
    <string name="device_info_state_p">State: %1$s</string>
    <string name="device_info_type_p">Type: %1$s</string>
    <string name="device_info_regDate_p">Registration date: %1$s</string>
    <string name="device_info_triggers">Triggers</string>
    <string name="device_info_execute_p">Execute %1$s</string>
    <string name="group_info">Resource group info</string>
    <string name="group_info_description_p">Description: %1$s</string>
    <string name="group_info_createdAt_p">Created at: %1$s</string>
    <string name="group_info_devices">Devices</string>
</resources>
