<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.groups.info.GroupInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:padding="5dp"
            android:rowCount="1">

            <ImageView
                android:id="@+id/group_info_back_arrow"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/description_back_arrow"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/group_info"
                android:textAlignment="center"
                android:textSize="18sp" />
        </GridLayout>

        <TextView
            android:id="@+id/group_info_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@color/colorLightGray"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textIsSelectable="true"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/group_info_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/group_info_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/group_info_createdAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="20dp"
                android:textIsSelectable="true" />

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>